[package]
name = "m5conv"
version = "0.1.0"
authors = ["mwc10 <43445389+mwc10@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
encoding_rs_io = "0.1.7"
encoding_rs = "0.8.26"
csv = "1.1.5"
noisy_float = "0.1.13"
